netlify success message form

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -45,6 +45,9 @@
                         Muchas gracias el cartero esta en camino! :)
                     </div>
 
+                    <input type="hidden" name="form-name" value="contact">
+
+
                     <div id="mail-fail" class="error">
                         Lo sentimos mucho no se ha podido enviar el mensaje. Intente más tarde :(
                     </div>
