succes message form

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -24,7 +24,7 @@
             </div>
             {{ "<!-- Contact Form -->" | safeHTML }}
             <div class="contact-form col-12 col-md-6 ">
-                <form action="sendmail.php" id="contact-form" role="form" name="contact" method="POST" data-netlify="true">
+                <form action="index.html" id="contact-form" role="form" name="contact" method="POST" data-netlify="true">
                     <div class="form-group">
                         <input type="text" placeholder="Nombre" class="form-control" name="name" id="name">
                     </div>
