--- a/layouts/partials/whatsuppButton.html
+++ b/layouts/partials/whatsuppButton.html
@@ -53,6 +53,7 @@
     .floating-wpp .floating-wpp-popup {
       /*border: 2px solid white;*/
       border-radius: 6px;
+      border-color: black;
       background-color: #25d366;
       position: absolute;
       overflow: hidden;
@@ -109,6 +110,7 @@
     .floating-wpp .floating-wpp-input-message textarea {
       border: 1px solid #25d366;
       border-radius: 4px;
+      border-color: black;
       box-shadow: none;
       padding: 8px;
       margin: 10px 0;
@@ -121,6 +123,7 @@
   
     .floating-wpp .floating-wpp-btn-send {
       margin-left: 12px;
+      color:black;
       font-size: 0;
       cursor: pointer;
     }
@@ -144,4 +147,10 @@
         '<img src="https://matheusfreitas.com/mercatorio/img/whatsapp.svg"/>',
     });
   });
+
+$(".floating-wpp").focus(function(){
+    document.activeElement.blur();
+});
 </script>
+
+
