dont popupkeyboard mobile

--- a/layouts/partials/whatsuppButton.html
+++ b/layouts/partials/whatsuppButton.html
@@ -148,7 +148,7 @@
     });
   });
 
-$(".floating-wpp").focus(function(){
+$(".floating-wpp").floatingWhatsApp.focus(function(){
     document.activeElement.blur();
 });
 </script>
