--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -87,7 +87,7 @@
     function myFunction() {
       if (window.pageYOffset >= sticky) {
         navbar.classList.add("sticky");
-        navbar.style.padding = '120px 0 57px';
+        //navbar.style.padding = '120px 0 57px';
         //header.setAttribute('style', 'z-index: 9999;');
 
       } else {
