padding hero area

--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -32,20 +32,20 @@
     </div>
 </section>
   <script>
-    window.onscroll = function () {
-      myFunction();
-    };
+    //window.onscroll = function () {
+      //myFunction();
+    //};
 
-    let hero = document.getElementById("heroArea");
+    //let hero = document.getElementById("heroArea");
     //let header =document.getElementById("headerTop");
 
-    function myFunction() {
-      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-        hero.style.padding = '95px 0px 45px';
+    //function myFunction() {
+      //if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        //hero.style.padding = '95px 0px 45px';
 
-      } else {
-        console.log("hi");
-      }
-    }
+      //} else {
+        //console.log("hi");
+      //}
+    //}
   </script>
 {{ end }}
