back to top button

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -23,6 +23,8 @@
   {{ partial "contact.html" . }}
 
   {{ partial "whatsuppButton.html" . }}
+
+  {{ partial "backToTopButton.html" . }}
  
 
 {{ end }}
