back to top button

--- a/layouts/partials/backToTopButton.html
+++ b/layouts/partials/backToTopButton.html
@@ -17,7 +17,7 @@ body {
   font-size: 18px;
   border: none;
   outline: none;
-  background-color: red;
+  background-color: purple;
   color: white;
   cursor: pointer;
   padding: 15px;
@@ -31,7 +31,7 @@ body {
 </head>
 <body>
 
-<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="ios-arrow-dropup-circle"></i></button>
+<button onclick="topFunction()" id="myBtn" title="Go to top">Subir</button>
 
 <script>
 //Get the button
