--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -79,18 +79,19 @@
     };
 
     let navbar = document.getElementById("navbar");
+    let mybutton = document.getElementById("myBtn");
     //let heroArea = document.querySelector("hero-area");
     //let header =document.getElementById("headerTop");
     let sticky = navbar.offsetTop;
-    let mybutton = document.getElementById("myBtn");
+    
 
     function myFunction() {
       if (window.pageYOffset >= sticky) {
         navbar.classList.add("sticky");
-        mybutton.style.display = "block";
+        //mybutton.style.display = "block";
       } else {
         navbar.classList.remove("sticky");
-        mybutton.style.display = "none";
+        //mybutton.style.display = "none";
       }
     }
     function topFunction() {
