--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -94,9 +94,9 @@
         //mybutton.style.display = "none";
       }
     }
-    function topFunction() {
-      document.body.scrollTop = 0;
-      document.documentElement.scrollTop = 0;
-    }
+    //function topFunction() {
+      //document.body.scrollTop = 0;
+      //document.documentElement.scrollTop = 0;
+    //}
   </script>
 </section>
