--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -70,7 +70,7 @@
         </div>
       </div>
     </div>
-    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="ion-android-arrow-dropup-circle"></i></button>
+    <!--<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="ion-android-arrow-dropup-circle"></i></button>-->
   </section>
   <!--Stycky nav bar-->
   <script>
