--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -31,7 +31,7 @@
         </div>
     </div>
 </section>
-  <script>
+  <!--<script>
     //window.onscroll = function () {
       //myFunction();
     //};
@@ -47,5 +47,5 @@
         //console.log("hi");
       //}
     //}
-  </script>
+  </script>-->
 {{ end }}
