--- a/layouts/404.html
+++ b/layouts/404.html
@@ -5,8 +5,8 @@
     <div class="row">
       <div class="col-md-12">
         <h1>404</h1>
-        <h2>Page Not Found</h2>
-        <p>Sorry, but the page you were trying to view does not exist.</p>
+        <h2>Página web no encontrada 🚨</h2>
+        <p>Lo sentimos, pero la página que intentaba ver no existe.</p>
         <a href="{{ .Site.BaseURL }}" class="btn btn-main mt-20">Go Home</a>
       </div>
     </div>
