--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
 {{ if .Site.Params.menufixed }}
 <section class="header navigation top-bar">
 {{ else }}
-<section class="header navigation">
+<section id="navbar" class="header navigation">
 {{ end }}
     <div class="container">
         <div class="row">
