background color pricing tables

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -392,7 +392,7 @@ a:hover {
     width: 80%;
   }
 }
-
+pri
 .title .border {
   border: none;
   display: inline-block;
@@ -1205,7 +1205,7 @@ a:hover {
   border-radius: 3px;
   padding-bottom: 40px;
   text-align: center;
-  background: #f9f9f9;
+  background: #f5f7f8;
 }
 
 .pricing-table .pricing-item a.btn-main,
