--- a/layouts/404.html
+++ b/layouts/404.html
@@ -7,7 +7,7 @@
         <h1>404</h1>
         <h2>Página web no encontrada 🚨</h2>
         <p>Lo sentimos, pero la página que intentaba ver no existe.</p>
-        <a href="{{ .Site.BaseURL }}" class="btn btn-main mt-20">Go Home</a>
+        <a href="{{ .Site.BaseURL }}" class="btn btn-main mt-20">Volver al Inicio</a>
       </div>
     </div>
   </div>
