--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,6 +1,35 @@
 <head>
 
+
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+<!-- MS, fb & Whatsapp -->
+
+<!-- MS Tile - for Microsoft apps-->
+<meta name="msapplication-TileImage" content="https://i.imgur.com/Sk3RMzH.png">    
+
+<!-- fb & Whatsapp -->
+
+<!-- Site Name, Title, and Description to be displayed -->
+<meta property="og:site_name" content="EqualDev - Diseño Páginas web">
+<meta property="og:title" content="EqualDev - Diseño de Páginas web">
+<meta property="og:description" content="Desarrollamos e implementamos soluciones con resultados reales sobre plataformas digitales permitiendo a las empresas explotar todo su potencial en la web">
+
+<!-- Image to display -->
+<!-- Replace   «example.com/image01.jpg» with your own -->
+<meta property="og:image" content="https://i.imgur.com/Sk3RMzH.png">
+
+<!-- No need to change anything here -->
+<meta property="og:type" content="website" />
+<meta property="og:image:type" content="image/jpeg">
+
+<!-- Size of image. Any size up to 300. Anything above 300px will not work in WhatsApp -->
+<meta property="og:image:width" content="300">
+<meta property="og:image:height" content="300">
+
+<!-- Website to visit when clicked in fb or WhatsApp-->
+<meta property="og:url" content="http://www.equaldev.com">
+
 <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}">
 {{ with .Site.Params.author }} <meta name="author" content="{{ . }}">{{ end }}
 {{ hugo.Generator }}
