--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,7 +6,7 @@
 <!-- MS, fb & Whatsapp -->
 
 <!-- MS Tile - for Microsoft apps-->
-<meta name="msapplication-TileImage" content="https://i.imgur.com/Sk3RMzH.png">    
+<meta name="msapplication-TileImage" content="https://i.imgur.com/oYVlRVh.jpg">    
 
 <!-- fb & Whatsapp -->
 
@@ -17,7 +17,7 @@
 
 <!-- Image to display -->
 <!-- Replace   «example.com/image01.jpg» with your own -->
-<meta property="og:image" content="https://i.imgur.com/Sk3RMzH.png">
+<meta property="og:image" content="https://i.imgur.com/oYVlRVh.jpg">
 
 <!-- No need to change anything here -->
 <meta property="og:type" content="website" />
