--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -13,7 +13,7 @@
 <!-- Site Name, Title, and Description to be displayed -->
 <meta property="og:site_name" content="EqualDev - Diseño Páginas web">
 <meta property="og:title" content="EqualDev - Diseño de Páginas web">
-<meta property="og:description" content="Desarrollamos e implementamos soluciones con resultados reales sobre plataformas digitales permitiendo a las empresas explotar todo su potencial en la web">
+<meta property="og:description" content="soluciones sobre plataformas digitales, empeza a explotar el potencial de la web">
 
 <!-- Image to display -->
 <!-- Replace   «example.com/image01.jpg» with your own -->
