--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -117,6 +117,16 @@
                     </ul>
                 </div>
             </div>
+            <div class="col-12 col-md-4">
+                <div class="phone-block contact-meta-block">
+                    <i class="tf-ion-ios-telephone"></i>
+                    <h4>Correo electrónico</h4>
+                    <p>
+                         <a href="mail:presupuestos@equaldev.com">presupuestos@equaldev.com</a>
+                        <br> <a href="mail:presupuestos@equaldev.com">info@equaldev.com</a>
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
 </section>
