--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -122,8 +122,8 @@
                     <i class="tf-ion-ios-telephone"></i>
                     <h4>Correo electrónico</h4>
                     <p>
-                         <a href="mail:presupuestos@equaldev.com">presupuestos@equaldev.com</a>
-                        <br> <a href="mail:presupuestos@equaldev.com">info@equaldev.com</a>
+                         <a href="mailto:presupuestos@equaldev.com">presupuestos@equaldev.com</a>
+                        <br> <a href="mailto:presupuestos@equaldev.com">info@equaldev.com</a>
                     </p>
                 </div>
             </div>
