--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -67,11 +67,17 @@
             <div class="col-12 col-md-4">
                 <div class="phone-block contact-meta-block">
                     <i class="tf-ion-ios-telephone"></i>
-                    <h4>Llamános</h4>
+                    <h4>Comunicate</h4>
                     <p>
                          {{ with .Site.Params.contact.phone }}Oficina: {{.}} {{ end }} 
                         <br> {{ with .Site.Params.contact.fax }} Celular: {{ . }} {{ end }}
+                        <br>
+                        <a href="mailto:presupuestos@equaldev.com">presupuestos@equaldev.com</a>
+                       <br> <a href="mailto:presupuestos@equaldev.com">info@equaldev.com</a>
                     </p>
+                    <p>
+                        
+                   </p>
                 </div>
             </div>
             <div class="col-12 col-md-4">
@@ -115,16 +121,6 @@
                         </li>
                         {{ end }}
                     </ul>
-                </div>
-            </div>
-            <div class="col-12 col-md-4">
-                <div class="phone-block contact-meta-block">
-                    <i class="tf-ion-ios-telephone"></i>
-                    <h4>Correo electrónico</h4>
-                    <p>
-                         <a href="mailto:presupuestos@equaldev.com">presupuestos@equaldev.com</a>
-                        <br> <a href="mailto:presupuestos@equaldev.com">info@equaldev.com</a>
-                    </p>
                 </div>
             </div>
         </div>
