--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -72,8 +72,8 @@
                          {{ with .Site.Params.contact.phone }}Oficina: {{.}} {{ end }} 
                         <br> {{ with .Site.Params.contact.fax }} Celular: {{ . }} {{ end }}
                         <br>
-                        <a href="mailto:presupuestos@equaldev.com">presupuestos@equaldev.com</a>
-                       <br> <a href="mailto:presupuestos@equaldev.com">info@equaldev.com</a>
+                        <a href="mailto:presupuestos@equaldev.com" style="color:#9a9a9a;">presupuestos@equaldev.com</a>
+                       <br> <a href="mailto:presupuestos@equaldev.com" style="color:#9a9a9a;">info@equaldev.com</a>
                     </p>
                     <p>
                         
