changes in texts

--- a/layouts/partials/blog.html
+++ b/layouts/partials/blog.html
@@ -17,7 +17,7 @@
             <article class="col-12 col-md-4">
                 <div class="post-item">
                     <div class="post-thumb">
-                        <img class="img-fluid shadow rounded" src="{{ .Params.image | absURL }}" alt="Generic placeholder image">
+                        <img class="img-fluid shadow rounded" src="{{ .Params.image | absURL }}" alt="equaldev imagenes blog">
                     </div>
                     <div class="post-title">
                         <h3 class="mt-0">
