changes in texts

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -78,7 +78,7 @@
                     <p>
                         
                    </p>
-                </div>
+                </div> 
             </div>
             <div class="col-12 col-md-4">
                 <div class="social-icons-block contact-meta-block">
@@ -87,35 +87,35 @@
                     <ul class="list-inline social-icon">
                         {{ with .Site.Params.contact.facebook }}
                         <li class="list-inline-item">
-                            <a href="{{.}}">
+                            <a href="{{.}}" target="_blank">
                                 <i class="tf-ion-social-facebook"></i>
                             </a>
                         </li>
                         {{ end }}
                         {{ with .Site.Params.contact.twitter }}
                         <li class="list-inline-item">
-                            <a href="{{.}}">
+                            <a href="{{.}}" target="_blank">
                                 <i class="tf-ion-social-twitter"></i>
                             </a>
                         </li>
                         {{ end }}
                         {{ with .Site.Params.contact.linkedin }}
                         <li class="list-inline-item">
-                            <a href="{{.}}">
+                            <a href="{{.}}" target="_blank">
                                 <i class="tf-ion-social-linkedin"></i>
                             </a>
                         </li>
                         {{ end }}
                         {{ with .Site.Params.contact.dribbble }}
                         <li class="list-inline-item">
-                            <a href="{{.}}">
+                            <a href="{{.}}" target="_blank">
                                 <i class="tf-ion-social-dribbble"></i>
                             </a>
                         </li>
                         {{ end }}
                         {{ with .Site.Params.contact.instagram }}
                         <li class="list-inline-item">
-                            <a href="{{.}}">
+                            <a href="{{.}}" target="_blank">
                                 <i class="tf-ion-social-instagram"></i>
                             </a>
                         </li>
