--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -41,6 +41,8 @@
 
 {{ "<!-- Favicon -->" | safeHTML }}
 <link rel="shortcut icon" type="image/x-icon" href="{{ `images/favicon.ico` | absURL }}" />
+<link rel="icon" type="image/png" href="https://i.imgur.com/SyvNk42.png" />
+
 
 {{"<!-- Stylesheets -->" | safeHTML}}
 {{ "<!-- Themefisher Icon font -->" | safeHTML }}
