--- a/layouts/partials/links.html
+++ b/layouts/partials/links.html
@@ -47,7 +47,7 @@
             </a>
           </li>
           <li class="list-group-item p-1">
-            <a target="_blank" rel="noopener noreferrer" class="stretched-link d-flex align-items-center text-center" href="https://www.equaldev.com/en/porfolio" title="Portfolio | Equaldev">
+            <a target="_blank" rel="noopener noreferrer" class="stretched-link d-flex align-items-center text-center" href="https://www.equaldev.com/en/portfolio" title="Portfolio | Equaldev">
               <img class="rounded" src="/images/portfolio.png" alt="EQUALDEV | Blog">
               <span class="flex-grow-1">Nuestro Portfolio</span>
             </a>
