--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,28 +1,5 @@
 {{ define "main" }}
 
-  {{ partial "hero.html" . }}
-
-  {{ partial "about-sm.html" . }}
-
-  {{ partial "feature.html" . }}
-
-  {{ partial "about.html" . }}
-
-  {{ partial "workingprocess.html" . }}
-
-  {{ partial "portfolio.html" . }}
-
-  {{ partial "team.html" . }}
-
-  {{ partial "pricing.html" . }}
-
-  {{ partial "testimonial.html" . }}
-
-  {{ partial "blog.html" . }}
-
-  {{ partial "contact.html" . }}
-
-  {{ partial "whatsuppButton.html" . }}
+  {{ partial "links.html" . }}
 
 {{ end }}
-
