--- a/layouts/partials/links.html
+++ b/layouts/partials/links.html
@@ -236,3 +236,4 @@ animation: beat 0.5s alternate infinite ease-in;
 <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js'></script>
 </body>
 </html>
+{{ "<!-- End section -->" | safeHTML }}
