--- a/layouts/index.html
+++ b/layouts/index.html
@@ -37,7 +37,7 @@
           </li>
           <li class="list-group-item p-1">
             <a target="_blank" rel="noopener noreferrer" class="stretched-link d-flex align-items-center text-center" href="https://cafecito.app/equaldev" title="Cafecito App - Apoya mi contenido">
-              <img class="rounded" src="/images/donate.png"Cafecito App - apoya mi contenido">
+              <img class="rounded" src="/images/donate.png" alt="Cafecito App - apoya mi contenido">
               <span class="flex-grow-1">Apoya mi contenido</span>
             </a>
           </li>
