change title tag

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 <head>
   <meta charset="UTF-8">
-  <title>EQUALdev- Diseño y Desarrollo web</title>
+  <title>EqualDev | Links | Diseño y desarrollo web | CABA |</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css'>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css'><link rel="stylesheet" href="./style.css">
 
