--- a/layouts/partials/links.html
+++ b/layouts/partials/links.html
@@ -2,17 +2,16 @@
 <html lang="en" class="h-100">
 <head>
   <meta charset="UTF-8">
-  <title>EQUALdev- Diseño y Desarrollo web</title>
+  <title>EqualDev | Links | Diseño y desarrollo web | CABA |</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css'>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css'><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-lg-8 d-flex flex-column align-items-center">
-      <img class="rounded-circle mt-4" src="/images/logo.png" width="130">
+      <img class="rounded-circle mt-4" src="https://i.imgur.com/XwLCGj9.png" width="130">
       <p class="text-center text-white mb-0 mt-3">@equal.dev</p>
       <div class="card w-100 border-0 shadow mt-4">
         <ul class="list-group list-group-flush border-0">
@@ -29,25 +28,25 @@
         <ul class="list-group list-group-flush border-0">
           <li class="list-group-item p-1">
             <a target="_blank" rel="noopener noreferrer" class="stretched-link d-flex align-items-center text-center" href="https://calendly.com/equaldev/primera-reunion" title="Off-canvas menu usando el modal de Bootstrap | Luis Badiali">
-              <img class="rounded" src="/images/calendar.png" alt="Agenda una reunión conmigo - calendly">
+              <img class="rounded" src="https://i.imgur.com/sxI5ECD.png" alt="Agenda una reunión conmigo - calendly">
               <span class="flex-grow-1">Agenda una reunión conmigo</span>
             </a>
           </li>
           <li class="list-group-item p-1">
             <a target="_blank" rel="noopener noreferrer" class="stretched-link d-flex align-items-center text-center" href="https://cafecito.app/equaldev" title="Cafecito App - Apoya mi contenido">
-              <img class="rounded" src="/images/donate.png" alt="Cafecito App - apoya mi contenido">
+              <img class="rounded" src="https://i.imgur.com/62MbsJT.png" alt="Cafecito App - apoya mi contenido">
               <span class="flex-grow-1">Apoya mi contenido</span>
             </a>
           </li>
           <li class="list-group-item p-1">
             <a target="_blank" rel="noopener noreferrer" class="stretched-link d-flex align-items-center text-center" href="https://www.equaldev.com/en/blog" title="Blog | Equaldev">
-              <img class="rounded" src="/images/blog.png" alt="EQUALDEV | Blog">
+              <img class="rounded" src="https://i.imgur.com/200xSTE.png" alt="EQUALDEV | Blog">
               <span class="flex-grow-1">Nuestro Blog sobre tecnología</span>
             </a>
           </li>
           <li class="list-group-item p-1">
-            <a target="_blank" rel="noopener noreferrer" class="stretched-link d-flex align-items-center text-center" href="https://www.equaldev.com/en/porfolio" title="Portfolio | Equaldev">
-              <img class="rounded" src="/images/portfolio.png" alt="EQUALDEV | Blog">
+            <a target="_blank" rel="noopener noreferrer" class="stretched-link d-flex align-items-center text-center" href="https://www.equaldev.com/en/portfolio" title="Portfolio | Equaldev">
+              <img class="rounded" src="https://i.imgur.com/5obytAO.png" alt="EQUALDEV | Blog">
               <span class="flex-grow-1">Nuestro Portfolio</span>
             </a>
           </li>
@@ -102,6 +101,8 @@
     </div>
   </div>
 </div>
+</body>
+</html>
 
 <!-- style -->
 <style>
@@ -196,7 +197,7 @@ body:after {
     linear,
     left top,
     left bottom,
-    from(rgb(255, 102, 0)),
+    from(rgba(235, 106, 20, 0.952)),
     to(rgb(230, 225, 225))
   );
   -webkit-background-clip: text;
@@ -233,5 +234,3 @@ animation: beat 0.5s alternate infinite ease-in;
   <script src='https://code.jquery.com/jquery-3.5.1.slim.min.js'></script>
 <script src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'></script>
 <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js'></script>
-</body>
-</html>
